# ip

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/.workflows/: python-build.yml
.github/workflows/: auto-merge.yml  automerge.yml  ci.yml  on-merge.yml  on-push.yml
static/: styles.css
templates/: index.html
tests/: test_app.py
