[tool.poetry]
name = "ip"
version = "0.1.0"
description = "Small whoami-style HTTP header echo service."
authors = ["August Meyers"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^3.1.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.9.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
